Allow for P2P communication

--- a/calpoly.ini
+++ b/calpoly.ini
@@ -3,5 +3,11 @@ ip_address=127.0.0.1
 json_port=19200
 lcm_port=19201
 
+id=12
+name=CalPolicy
+
+[peers]
+policy_servers=127.0.0.1:18200
+
 [security]
 psk=Armstrong5ever
