--- a/validation/test_single_request/Makefile
+++ b/validation/test_single_request/Makefile
@@ -1,4 +1,7 @@
 SHARED_PATH=../../mission_server/
 
 all:
-	g++ -g -o ms_single_req test_ms_sr.cpp $(SHARED_PATH)mission_server.cpp -I$(SHARED_PATH) -lproc
+	g++ -g -o test_single_request test_ms_sr.cpp $(SHARED_PATH)mission_server.cpp -I$(SHARED_PATH) -lproc
+
+clean:
+	rm test_single_request
