gs list in config and fixed more typos in request_handler

--- a/calpoly.ini
+++ b/calpoly.ini
@@ -9,5 +9,11 @@ name=CalPolicy
 [peers]
 policy_servers=127.0.0.1:18200
 
+[groundstations]
+#id, lat, lon
+gs1=0,14,14
+gs2=1,64,33
+gs3=2,12,55
+
 [security]
 psk=Armstrong5ever
