--- a/purdue.ini
+++ b/purdue.ini
@@ -9,5 +9,11 @@ name=Perdue Policy Server
 [peers]
 policy_servers=127.0.0.1:19200
 
+[groundstations]
+#id, lat, lon
+gs1=10,11,11
+gs2=11,61,31
+gs3=12,11,51
+
 [security]
 psk=PurdueNotDoThat
